--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,14 @@
   height: 40vmin;
   pointer-events: none;
 }
+.Test {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+
+}
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
