--- a/src/style.css
+++ b/src/style.css
@@ -6,7 +6,8 @@ body{
     background-color: white;
     margin: auto;
     margin-top: 10px;
-    width: 25%;
+    width: 20%;
+    height: 550px;
     display: flex;
     flex-direction: column;
     align-items: center;
